<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="add_expense"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_expense"
        android:shortcutShortLabel="@string/shortcut_add_expense_short"
        android:shortcutLongLabel="@string/shortcut_add_expense_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="dev.raihan.wang"
            android:targetClass="dev.raihan.wang.MainActivity">
            <extra android:name="shortcut_action" android:value="new_expense" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="add_income"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_income"
        android:shortcutShortLabel="@string/shortcut_add_income_short"
        android:shortcutLongLabel="@string/shortcut_add_income_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="dev.raihan.wang"
            android:targetClass="dev.raihan.wang.MainActivity">
            <extra android:name="shortcut_action" android:value="new_income" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="view_graphs"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_graphs"
        android:shortcutShortLabel="@string/shortcut_graphs_short"
        android:shortcutLongLabel="@string/shortcut_graphs_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="dev.raihan.wang"
            android:targetClass="dev.raihan.wang.MainActivity">
            <extra android:name="shortcut_action" android:value="graphs" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="view_wallets"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_wallets"
        android:shortcutShortLabel="@string/shortcut_wallets_short"
        android:shortcutLongLabel="@string/shortcut_wallets_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="dev.raihan.wang"
            android:targetClass="dev.raihan.wang.MainActivity">
            <extra android:name="shortcut_action" android:value="wallets" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

</shortcuts>
